# mdbook-typstpdf

./: Cargo.toml  README.md
docs/: markdown-events-0.9.3.md  markdown-typst.md  pulldown-cmark-0.13.0-based-rules.md  pulldown-cmark-0.9.3-based-rules.md
samples/small-twx-k8s/: README.md  book.toml
samples/small-twx-k8s/src/: 01-introduction.md  04-helm-chart-repository.md  SUMMARY.md
samples/small-twx-k8s/support/typst-template/: demo-template-v1.typ
samples/test_book/: .gitignore  book.toml
src/: lib.rs  main.rs
src/config/: book.rs  chapter.rs  mod.rs  renderer.rs
