[package]
name = "mdbook-typstpdf"
version = "0.1.0"
edition = "2021"
authors = ["Desheng Xu <xudesheng@gmail.com>"]
description = "An mdBook backend that generates PDF output using Typst"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xudesheng/mdbook-typstpdf"
documentation = "https://docs.rs/mdbook-typstpdf"
homepage = "https://github.com/xudesheng/mdbook-typstpdf"
readme = "README.md"
keywords = ["mdbook", "typst", "pdf", "documentation", "book", "markdown"]
categories = ["command-line-utilities", "text-processing", "development-tools::build-utils"]


[dependencies]
aho-corasick = "1.0.0"
anyhow = "1.0.47"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
cssparser = "0.34.0"
env_logger = "0.11.0"
html5ever = "0.29.0"
imagesize = "0.13.0"
indexmap = "2.7.0"
log = "0.4.0"
mdbook = { version = "0.4.35", default-features = false }
normpath = "1.0.0"
once_cell = "1.18.0"
pulldown-cmark = { version = "0.13", default-features = false }
regex = "1.5.5"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
ego-tree = "0.10.0"
replace_with = "0.1.7"
semver = "1.0.0"
serde = { version = "1.0.85", features = ["derive"] }
serde_yaml = "0.9.0"
tempfile = "3.0.0"
toml = { version = "0.8.0", default-features = false, features = ["preserve_order","display"] }
utf8parse = "0.2.2"
walkdir = "2.0.0"
lazy_static = "1.4.0"
pathdiff = "0.2.3"
url = "2.5.4"

[dev-dependencies]
indoc = "2.0.5"
insta = { version = "1.36.0" }
similar = { version = "2.5.0", features = ["text"] }
tracing = { version = "0.1.0", default-features = false, features = ["std"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["fmt", "tracing-log"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

